// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="cjemrls soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="ckav5h3 soui-radio-indicator-wrapper"
  >
    <span
      class="cs2ee7w soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-t5tqm4 soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="cjfqess soui-radio-group"
>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="cjfqess soui-radio-group c6vigfy soui-radio-group-button c-2ea0zf soui-button-group"
>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked cusxw20 soui-button-primary c-5l0cgk soui-button-button"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="cjfqess soui-radio-group c6vigfy soui-radio-group-button c-2ea0zf soui-button-group"
>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked cusxw20 soui-button-primary c-5l0cgk soui-button-button chppqdk soui-button-outline"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="cjfqess soui-radio-group"
>
  <div
    class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="cjfqess soui-radio-group"
>
  <div
    class="cjemrls soui-radio-wrapper cxyxr6k soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cxyxr6k soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cxyxr6k soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cxyxr6k soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cxyxr6k soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cxyxr6k soui-radio-wrapper-disabled cfiorpj soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cxyxr6k soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="cjfqess soui-radio-group"
>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cxyxr6k soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="cjfqess soui-radio-group"
>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="cjfqess soui-radio-group"
>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cjfqess soui-radio-group c6vigfy soui-radio-group-button c-2ea0zf soui-button-group"
  >
    <button
      class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked cusxw20 soui-button-primary c-5l0cgk soui-button-button c-27rzeb soui-button-small"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-27rzeb soui-button-small"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-27rzeb soui-button-small"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="cjfqess soui-radio-group c6vigfy soui-radio-group-button c-2ea0zf soui-button-group"
    style="margin-top: 24px;"
  >
    <button
      class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="cjfqess soui-radio-group c6vigfy soui-radio-group-button c-2ea0zf soui-button-group"
    style="margin-top: 24px;"
  >
    <button
      class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked cusxw20 soui-button-primary c-5l0cgk soui-button-button c-2btuwv soui-button-large"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-2btuwv soui-button-large"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cjemrls soui-radio-wrapper c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-2btuwv soui-button-large"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="cjemrls soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="ckav5h3 soui-radio-indicator-wrapper"
  >
    <span
      class="cs2ee7w soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-t5tqm4 soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
